# flagella-simu

./: CMakeLists.txt
armadillo/include/armadillo_bits/: config.hpp
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build1/debug/: Makefile  f_result.txt  pos_result.txt
build1/src/: Makefile
debug/: CMakeLists.txt  sim_driver.cpp
include/: grid.h  multi_flagella.h  simulation.h  single_flagella.h  utils.h
src/: CMakeLists.txt  grid.cpp  multi_flagella.cpp  single_flagella.cpp  utils.cpp
